--- a/index.html
+++ b/index.html
@@ -22,9 +22,39 @@
     />
   </head>
   <body>
-    <h1>hello</h1>
-    <button class="btn btn-outline-primary">joy bangla banglar joy</button>
-    <i class="fab fa-facebook-f fa-3x text-primary"></i>
+    <!-- starting of header area -->
+    <header>
+      <!-- nav section start here -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-lg">
+          <a class="navbar-brand navbar-logo " href="#">BookLoop</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse  text-center " id="navbarSupportedContent">
+            <ul class="navbar-nav  mb-2 mb-lg-0 text-center mx-auto">
+              <li class="nav-item ">
+                <a class="nav-link " aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Testimonial</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+             </ul>
+              <button class="btn btn-outline me-2 " type="submit">Search</button>
+            
+          </div>
+        </div>
+      </nav>
+      <!-- nav section end here -->
+    </header>
+
+    <!-- ending of header area -->
 
     <!-- Bootstrap 5 JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
